--- a/style.css
+++ b/style.css
@@ -264,3 +264,41 @@
     }
 }
 
+@media screen and (max-width: 1378px) {
+
+    .container .logo{
+        font-size: 26px;
+        font-weight: 700;
+        text-decoration: none;
+        color: #fff;
+        margin-left: 30px;
+    }
+
+    .container nav ul li a{
+        text-decoration: none;
+        font-size: 14px;
+        color: #fff;
+        transition: 0.3s;
+    }
+
+    .content .section-1 h1{
+        margin-bottom: 20px;
+        font-size: 32px;
+        font-weight: 700;
+        color: #fff;
+    }
+    
+    .content .section-1 h3{
+        font-size: 18px;
+        color: #fff;
+        margin-bottom: 10px;
+    }
+    
+    .content .section-1 p{
+        font-size: 10px;
+        color: grey;
+        margin-bottom: 50px;
+    }
+}
+
+
